# yaml-bundler

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
scripts/: setup.sh  version.py
stubs/jsonpath_ng/: __init__.pyi
testcases/invalid/: duplicate-key.yaml  unexpected-parameter.yaml
testcases/valid/: jsonpath.yaml  merge-into-array.yaml  merge-into-map.yaml  nested.yaml  noinclude.yaml  simple.yaml
testcases/valid/expected/: jsonpath.yaml  merge-into-array.yaml  merge-into-map.yaml  nested.yaml  noinclude.yaml  simple.yaml
testcases/valid/sub/: jsonpath.yaml  merge-into-map.yaml  nested1.yaml
tests/: test_yamlbundler.py
yamlbundler/: command.py  include.py  util.py
